--- a/eva-panther/src/app/admin/usuarios/usuarios.component.html
+++ b/eva-panther/src/app/admin/usuarios/usuarios.component.html
@@ -1,61 +1,151 @@
-<div class="container">
-    <div class="row ">
-        <div class="col-md-12">
-            <div class="well well-sm">
-                <form class="form-horizontal" method="post">
-                    <fieldset>
-                        <legend class="text-center header">Usuarios</legend>
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="fname" name="name" type="text" placeholder="Nombres" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="lname" name="name" type="text" placeholder="Apellidos" class=" form-control">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i
-                                    class="fas fa-envelope-square bigicon"></i>
-                            </span>
-                            <div class="col-md-8">
-                                <input id="email" name="email" type="text" placeholder="Correo electronico"
-                                    class="form-control">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i
-                                    class="fa fa-phone-square bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="phone" name="phone" type="text" placeholder="Telefono" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i
-                                    class="fa fa-phone-square bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="contraseña" name="contraseña" type="password" placeholder="contraseña"
-                                    class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i
-                                    class="fa fa-phone-square bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="rol" name="rol" type="number" placeholder="rol" class="form-control">
-                            </div>
-                        </div>
-
-                    </fieldset>
-                </form>
-            </div>
-        </div>
+    <div class="container">
+      <h1>USUARIOS</h1>
+      <ul>
+        <button type="submit" class="btn btn-success" (click)="activateNew() ">New User</button>
+      </ul>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Email</th>
+            <th scope="col">Option</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of users">
+            <th scope="row">{{user.id}}</th>
+            <td>{{user.nameUser | uppercase}}</td>
+            <td>{{user.lastName}}</td>
+            <td>{{user.phoneNumber}}</td>
+            <td>{{user.user}}</td>
+            <td>{{user.roles}}</td>
+  
+            <td>
+              <button type="submit" class="btn btn-primary" (click)="activateEdit(user.id) ">Edit</button>
+            </td>
+            <td>
+              <button type="button" class="btn btn-danger" (click)="deleteUser(user.id) ">Delete</button>
+            </td>
+  
+          </tr>
+        </tbody>
+  
+      </table>
     </div>
+  
+  
+    <div class="container-fluid" *ngIf="newSection">
+  
+      <h1> Register </h1>
+      <div>
+        <form>
+          <div class="form-group">
+            <label>First Name</label>
+            <input type="text" class="form-control" id="name" name="nameUser" [(ngModel)]="modelUser.nameUser" 
+              [ngModelOptions]="{standalone: true}" placeholder="First Name" required>
+          </div>
+  
+  
+          <div class="form-group">
+            <label>Last Name</label>
+            <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
+              [ngModelOptions]="{standalone: true}" placeholder="Last Name" required>
+          </div>
+  
+          <div class="form-group">
+            <label>Phone</label>
+            <input type="number" class="form-control" aria-describedby="phone" placeholder="Number phone"
+              [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
+          </div>
+  
+          <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"
+              [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
+  
+          </div>
+  
+          <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" aria-describedby="password" placeholder="Enter password"
+              [(ngModel)]="modelUser.password" [ngModelOptions]="{standalone: true}" required>
+  
+          </div>
+  
+          <div class="form-group">
+            <label>Rol</label>
+            <input type="number" class="form-control" aria-describedby="rol" placeholder="Enter rol"
+              [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
+  
+          </div>
+  
+  
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary" (click)="nuevoUsuario()">New user</button>
+          </div>
+  
+        </form>
+      </div>
+    </div>
+    <div class="container-fluid" *ngIf="editSection">
+  
+      <h1> Update </h1>
+      <div>
+        <form *ngFor="let modelUser of user">
+          <div class="form-group">
+            <label>First Name: <b>{{modelUser.nameUser}} </b> </label>
+            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="modelUser.nameUser"
+              [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.nameUser}} " required>
+          </div>
+  
+  
+          <div class="form-group">
+            <label>Last Name: <b>{{modelUser.lastName}} </b></label>
+            <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
+              [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.lastName}}" required>
+          </div>
+  
+          <div class="form-group">
+            <label>Phone: <b>{{modelUser.phoneNumber}} </b> </label>
+            <input type="number" class="form-control" aria-describedby="phone" placeholder="{{modelUser.phoneNumber}}"
+              [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
+          </div>
+  
+          <div class="form-group">
+            <label>Email address: <b>{{modelUser.user}} </b></label>
+            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="{{modelUser.user}}"
+              [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
+  
+          </div>
 
-</div>
+          <div class="form-group">
+            <label>Password: <b>{{modelUser.password}} </b></label>
+            <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
+              [ngModelOptions]="{standalone: true}"  required>
+          </div>
+
+          <div class="form-group">
+            <label>API: <b>{{modelUser.ke}} </b></label>
+            <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
+              [ngModelOptions]="{standalone: true}"  required>
+          </div>
+
+          <div class="form-group">
+            <label>Rol: <b>{{modelUser.roles}} </b></label>
+            <input type="text" class="form-control" aria-describedby="roles" placeholder="{{modelUser.roles}}"
+              [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
+  
+          </div>
+  
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary" (click)="editUsuario(modelUser.id, modelUser)">Save update</button>
+          </div>
+  
+        </form>
+      </div>
+    </div>
+  <!-- </div> -->
