--- a/eva-panther/src/app/app.component.html
+++ b/eva-panther/src/app/app.component.html
@@ -105,10 +105,10 @@
                                 Nosotros
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" *ngIf="loginAdmin">
                             <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">
                                 <i class="fas fa-user-shield"></i>
-                                {{nombreUsuario}}
+                                Admin
                             </a>
                         </li>
                     </ul>
