agregados elementod en el login

--- a/eva-panther/src/app/app.component.html
+++ b/eva-panther/src/app/app.component.html
@@ -108,7 +108,7 @@
                         <li class="nav-item" *ngIf="loginAdmin">
                             <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">
                                 <i class="fas fa-user-shield"></i>
-                                Admin
+                                {{nombreUsuario}}
                             </a>
                         </li>
                     </ul>
