--- a/eva-panther/src/app/app.component.html
+++ b/eva-panther/src/app/app.component.html
@@ -106,9 +106,9 @@
                             </a>
                         </li>
                         <li class="nav-item" *ngIf="loginAdmin">
-                            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">
+                            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active" (usuarioActual)="traerUsuario(nombreU)">
                                 <i class="fas fa-user-shield"></i>
-                                {{nombreUsuario}}
+                              
                             </a>
                         </li>
                     </ul>
