Corregido login y editado herramientas y recursos

--- a/eva-panther/src/app/admin/roles/roles.component.html
+++ b/eva-panther/src/app/admin/roles/roles.component.html
@@ -1,84 +1,3 @@
-<div class="container">
-  <h1>ROLES</h1>
-  <ul>
-    <button type="submit" class="btn btn-success" (click)="activateNew() ">New Rol</button>
-  </ul>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Description</th>
-        <th scope="col">Option</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let rol of roles">
-        <th scope="row">{{rol.id}}</th>
-        <td>{{rol.name}}</td>
-        <td>{{rol.description}}</td>
-        <td>
-          <button type="submit" class="btn btn-primary" (click)="activateEdit(rol.id) ">Edit</button>
-        </td>
-        <td>
-          <button type="button" class="btn btn-danger" (click)="deleteRol(rol.id) ">Delete</button>
-        </td>
-
-      </tr>
-    </tbody>
-
-  </table>
-</div>
-
-
-<div class="container-fluid" *ngIf="newSection">
-
-  <h1> Register </h1>
-  <div>
-    <form>
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="modelRol.name" 
-          [ngModelOptions]="{standalone: true}" placeholder="Name of Rol" required>
-      </div>
-
-
-      <div class="form-group">
-        <label>Description</label>
-        <input type="text" class="form-control" aria-describedby="Description" [(ngModel)]="modelRol.description"
-          [ngModelOptions]="{standalone: true}" placeholder="Description of Rol" required>
-      </div>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary" (click)="nuevoRol()">New rol</button>
-      </div>
-
-    </form>
-  </div>
-</div>
-<div class="container-fluid" *ngIf="editSection">
-
-  <h1> Update </h1>
-  <div>
-    <form *ngFor="let data of rol">
-      <div class="form-group">
-        <label>Name of Rol: <b>{{data.name}} </b> </label>
-        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="data.name"
-          [ngModelOptions]="{standalone: true}" placeholder="{{data.name}} " required>
-      </div>
-
-
-      <div class="form-group">
-        <label>Description of Rol <b>{{data.description}} </b></label>
-        <input type="text" class="form-control" aria-describedby="Description" [(ngModel)]="data.description"
-          [ngModelOptions]="{standalone: true}" placeholder="{{data.description}}" required>
-      </div>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary" (click)="editRol(data.id, data)">Save update</button>
-      </div>
-
-    </form>
-  </div>
-</div>
-
+<p>
+  roles works!
+</p>
