--- a/eva-panther/src/app/admin/usuarios/usuarios.component.html
+++ b/eva-panther/src/app/admin/usuarios/usuarios.component.html
@@ -123,16 +123,16 @@
           </div>
 
           <div class="form-group">
-            <label>Password: <b></b></label>
-            <input type="password" class="form-control" bueno amor aria-describedby="password" [(ngModel)]="modelUser.password"
+            <label>Password: <b>{{modelUser.password}} </b></label>
+            <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
               [ngModelOptions]="{standalone: true}"  required>
           </div>
-<!-- 
+
           <div class="form-group">
             <label>API: <b>{{modelUser.ke}} </b></label>
             <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
               [ngModelOptions]="{standalone: true}"  required>
-          </div> -->
+          </div>
 
           <div class="form-group">
             <label>Rol: <b>{{modelUser.roles}} </b></label>
