corregido commit login y editado

--- a/eva-panther/src/app/navbar/home/home.component.html
+++ b/eva-panther/src/app/navbar/home/home.component.html
@@ -75,7 +75,7 @@
       <p>Aquí, se iniciara un nuevo proyecto, y se incluirá una breve descripción para este. Tendrá un link de
         direccionamiento, el cualconducirá al apartado donde se encontraran las actividades que se deben seguir.
       </p>
-      <p><a class="btn btn-secondary"  role="button">Conoce más »</a></p>
+      <p><a class="btn btn-secondary" [routerLink]="['/proyecto-dos']" routerLinkActive="router-link-active"  role="button">Conoce más »</a></p>
     </div>
 
     <div class="temas col"id="temaImpar">
@@ -86,7 +86,7 @@
       <h2 class="mt-2">Proyecto 3</h2>
       <p>Aquí, se iniciara un nuevo proyecto, y se incluirá una breve descripción para este. Tendrá un link de
         direccionamiento, el cualconducirá al apartado donde se encontraran las actividades que se deben seguir.</p>
-      <p><a class="btn btn-secondary" href="#" role="button">Conoce más »</a></p>
+      <p><a class="btn btn-secondary" [routerLink]="['/proyecto-tres']" routerLinkActive="router-link-active"  role="button">Conoce más »</a></p>
     </div>
 
   </div>
