--- a/eva-panther/src/app/asidebar/herramientas/herramientas.component.html
+++ b/eva-panther/src/app/asidebar/herramientas/herramientas.component.html
@@ -10,62 +10,69 @@
     </p>
   </div>
   <h2>Entornos de desarrollo (IDE) </h2>
-<div *ngFor="let ide of listaIdes">
-  <div class="card mb-3 my-4" style="max-width: 540px;">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img [src]="ide.logoUrl" class="card-img" alt="Logo del Ide">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{ide.nombre}}</h5>
-          <p class="card-text">{{ide.descripcion}}</p>
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-6 col-xl-4" *ngFor="let ide of listaIdes ">
+      <div class="card mb-3 my-4" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img [src]="ide.logoUrl" class="card-img" alt="Logo del Ide">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{ide.nombre}}</h5>
+              <p class="card-text">{{ide.descripcion}}</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer d-flex justify-content-end">
+          <a class="btn btn-info" [href]="ide.link">Obtener </a>
         </div>
       </div>
     </div>
-    <div class="card-footer d-flex justify-content-end">
-          <a class="btn btn-info" [href]="ide.link">Obtener </a> 
-    </div>
   </div>
-</div>
-<h2>Editores de Código</h2>
-<div *ngFor="let edit of listaEditores">
-  <div class="card mb-3 my-4" style="max-width: 540px;">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img [src]="edit.logoUrl" class="card-img" alt="Logo del Editor">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{edit.nombre}}</h5>
-          <p class="card-text">{{edit.descripcion}}</p>
+  <h2>Editores de Código</h2>
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-6 col-xl-4" *ngFor="let edit of listaEditores">
+      <div class="card mb-3 my-4" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img [src]="edit.logoUrl" class="card-img" alt="Logo del Editor">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{edit.nombre}}</h5>
+              <p class="card-text">{{edit.descripcion}}</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer d-flex justify-content-end">
+          <a class="btn btn-info" [href]="edit.link">Obtener </a>
         </div>
       </div>
     </div>
-    <div class="card-footer d-flex justify-content-end">
-          <a class="btn btn-info" [href]="edit.link">Obtener </a> 
-    </div>
   </div>
-</div>
-<h2>Herraminetaspara desarrollo</h2>
-<div *ngFor="let herramienta of listaHerramientas">
-  <div class="card mb-3 my-4" style="max-width: 540px;">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img [src]="herramienta.logoUrl" class="card-img" alt="Logo de la herramienta">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{herramienta.nombre}}</h5>
-          <p class="card-text">{{herramienta.descripcion}}</p>
+
+  <h2>Herraminetaspara desarrollo</h2>
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-6 col-xl-4" *ngFor="let herramienta of listaHerramientas">
+      <div class="card mb-3 my-4" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img [src]="herramienta.logoUrl" class="card-img" alt="Logo de la herramienta">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{herramienta.nombre}}</h5>
+              <p class="card-text">{{herramienta.descripcion}}</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer d-flex justify-content-end">
+          <a class="btn btn-info" [href]="herramienta.link">Obtener </a>
         </div>
       </div>
     </div>
-    <div class="card-footer d-flex justify-content-end">
-          <a class="btn btn-info" [href]="herramienta.link">Obtener </a> 
-    </div>
   </div>
-</div>
 
 
 </div>
