--- a/eva-panther/src/app/asidebar/recursos/externos/externos.component.html
+++ b/eva-panther/src/app/asidebar/recursos/externos/externos.component.html
@@ -1,66 +1,42 @@
-<div class="container-fluid">
-  <h1>
-    Aqui encontraras algunos recursos que de seguro serab de tu interes
-  </h1>
-  <hr class="my-4" />
-  <div class="my-4">
-    <p>
-      A continuación, encontraras un listado útil de recursos, que van a ser de
-      tu interes, y te ayudaran a complementar tu aprendizaje.
-    </p>
-  </div>
-  <div>
-    <h2 class="my-4">
-      recursos externos
-    </h2>
-    <h4>
-      Capacitate par el empleo
-    </h4>
-    <p>
-      Es una plataforma en donde encontrarás un gran número de cursos gratuitos
-    </p>
-    <a
-      class="btn btn-primary"
-      href="https://capacitateparaelempleo.org/pages.php?r=.index&filter_areaID=8"
-    >
-      Vamos!</a
-    >
-  </div>
-  <div>
-    <h4 class="my-4">
-      Introducción a JAVA
-    </h4>
-    <p>
-      Un curso gratuito ofrecido por coursera
-    </p>
-    <a
-      class="btn btn-primary"
-      href="https://www.coursera.org/learn/introduccion-java"
-      >Vamos!</a
-    >
-  </div>
-  <div>
-    <h4 class="my-4">
-      Curso de HTML desde cero
-    </h4>
-    <p>
-      las bases para un desarrollador web profesional, curso gratuito ofrecido
-      por azul web
-    </p>
-    <a
-      class="btn btn-primary"
-      href="web https://www.azulweb.net/curso-gratuito-de-html5-desde-cero-las-bases-para-un-desarrollador-web-profesional/?utm_campaign=arteprogra&utm_medium=facebook&utm_source=septiembre2019"
-      >Vamos!</a
-    >
-  </div>
-  <div>
-    <h4 class="my-4">
-      Nigbox
-    </h4>
-    <p>
-      las bases para un desarrollador web profesional, curso gratuito ofrecido
-      por azul web
-    </p>
-    <a class="btn btn-primary" href="https://www.nigbox.com/cursos/">Vamos!</a>
+ <div class="jumbotron jumbotron-panther">
+  <div class="img"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="display-4">Hola, bienvenido a {{name}}</h1>
+        <p class="lead my-4">
+          A continuacion encontraras diferentes enelaces, para seguix expandiendo tus conocimientos
+        </p>
+        <hr class="my-4" />
+        <p>Ahora animate, y sigue aprendiendo</p>
+      </div>
+    </div>
   </div>
 </div>
+
+<div class="container-fluid">
+<div>
+  <h2 class="d-flex justify-content-center display-3 my-5"> Lista de recursos {{name}}</h2>
+</div>
+
+<div class="row  my-4">
+    <div class="externos col-12 col-md-6 col-lg-3 col-xl-4 d-flex justify-content-center" *ngFor="let recurso of listaRecursos">
+        <div class="card text-white  mb-3" style="max-width: 18rem;">
+          <div class="card-header">
+            <h4 class="card-title">
+                {{recurso.nombre}}
+            </h4></div>
+          <div class="card-body">
+            <p class="card-text">{{recurso.descripcion}}</p>
+          </div>
+          <div class="card-footer d-flex justify-content-end">
+            <a class="btn btn-info" [href]="recurso.link">Obtener </a>
+          </div>
+      </div>
+      
+      
+      
+      </div>
+</div>
+
+
