--- a/eva-panther/src/app/admin/usuarios/usuarios.component.html
+++ b/eva-panther/src/app/admin/usuarios/usuarios.component.html
@@ -1,151 +1,144 @@
+<div class="container-fluid ">
+  <h1>ADMINISTRACIÓN DE USUARIOS</h1>
+  <ul>
+    <button type="submit" class="btn btn-success" (click)="activateNew() ">Nuevo usario</button>
+  </ul>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Email</th>
+        <th scope="col">Rol</th>
+        <th scope="col">Option</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <th scope="row">{{user.id}}</th>
+        <td>{{user.nameUser | uppercase}}</td>
+        <td>{{user.lastName}}</td>
+        <td>{{user.phoneNumber}}</td>
+        <td>{{user.user}}</td>
+        <td>{{user.roles}}</td>
 
-    <div class="container">
-      <h1>USUARIOS</h1>
-      <ul>
-        <button type="submit" class="btn btn-success" (click)="activateNew() ">New User</button>
-      </ul>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Email</th>
-            <th scope="col">Option</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let user of users">
-            <th scope="row">{{user.id}}</th>
-            <td>{{user.nameUser | uppercase}}</td>
-            <td>{{user.lastName}}</td>
-            <td>{{user.phoneNumber}}</td>
-            <td>{{user.user}}</td>
-            <td>{{user.roles}}</td>
-  
-            <td>
-              <button type="submit" class="btn btn-primary" (click)="activateEdit(user.id) ">Edit</button>
-            </td>
-            <td>
-              <button type="button" class="btn btn-danger" (click)="deleteUser(user.id) ">Delete</button>
-            </td>
-  
-          </tr>
-        </tbody>
-  
-      </table>
-    </div>
-  
-  
-    <div class="container-fluid" *ngIf="newSection">
-  
-      <h1> Register </h1>
-      <div>
-        <form>
-          <div class="form-group">
-            <label>First Name</label>
-            <input type="text" class="form-control" id="name" name="nameUser" [(ngModel)]="modelUser.nameUser" 
-              [ngModelOptions]="{standalone: true}" placeholder="First Name" required>
-          </div>
-  
-  
-          <div class="form-group">
-            <label>Last Name</label>
-            <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
-              [ngModelOptions]="{standalone: true}" placeholder="Last Name" required>
-          </div>
-  
-          <div class="form-group">
-            <label>Phone</label>
-            <input type="number" class="form-control" aria-describedby="phone" placeholder="Number phone"
-              [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
-          </div>
-  
-          <div class="form-group">
-            <label>Email address</label>
-            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"
-              [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
-  
-          </div>
-  
-          <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" aria-describedby="password" placeholder="Enter password"
-              [(ngModel)]="modelUser.password" [ngModelOptions]="{standalone: true}" required>
-  
-          </div>
-  
-          <div class="form-group">
-            <label>Rol</label>
-            <input type="number" class="form-control" aria-describedby="rol" placeholder="Enter rol"
-              [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
-  
-          </div>
-  
-  
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary" (click)="nuevoUsuario()">New user</button>
-          </div>
-  
-        </form>
+        <td>
+          <button type="submit" class="btn btn-primary" (click)="activateEdit(user.id) ">Editar</button>
+          <button type="button" class="btn btn-danger" (click)="deleteUser(user.id) ">Borrar</button>
+        </td>
+      </tr>
+    </tbody>
+
+  </table>
+</div>
+
+
+<div class="container-fluid nuevoUser" *ngIf="newSection">
+
+  <h1> Nuevo usuario </h1>
+  <div>
+    <form>
+      <div class="form-group">
+        <label><i class="fa fa-user bigicon"></i>Primer nombre</label>
+        <input type="text" class="form-control" id="name" name="nameUser" [(ngModel)]="modelUser.nameUser"
+          [ngModelOptions]="{standalone: true}" placeholder="Digite el nombre de usuario" required>
       </div>
-    </div>
-    <div class="container-fluid" *ngIf="editSection">
-  
-      <h1> Update </h1>
-      <div>
-        <form *ngFor="let modelUser of user">
-          <div class="form-group">
-            <label>First Name: <b>{{modelUser.nameUser}} </b> </label>
-            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="modelUser.nameUser"
-              [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.nameUser}} " required>
-          </div>
-  
-  
-          <div class="form-group">
-            <label>Last Name: <b>{{modelUser.lastName}} </b></label>
-            <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
-              [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.lastName}}" required>
-          </div>
-  
-          <div class="form-group">
-            <label>Phone: <b>{{modelUser.phoneNumber}} </b> </label>
-            <input type="number" class="form-control" aria-describedby="phone" placeholder="{{modelUser.phoneNumber}}"
-              [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
-          </div>
-  
-          <div class="form-group">
-            <label>Email address: <b>{{modelUser.user}} </b></label>
-            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="{{modelUser.user}}"
-              [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
-  
-          </div>
 
-          <div class="form-group">
-            <label>Password: <b></b></label>
-            <input type="password" class="form-control" bueno amor aria-describedby="password" [(ngModel)]="modelUser.password"
-              [ngModelOptions]="{standalone: true}"  required>
-          </div>
-<!-- 
-          <div class="form-group">
-            <label>API: <b>{{modelUser.ke}} </b></label>
-            <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
-              [ngModelOptions]="{standalone: true}"  required>
-          </div> -->
 
-          <div class="form-group">
-            <label>Rol: <b>{{modelUser.roles}} </b></label>
-            <input type="text" class="form-control" aria-describedby="roles" placeholder="{{modelUser.roles}}"
-              [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
-  
-          </div>
-  
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary" (click)="editUsuario(modelUser.id, modelUser)">Save update</button>
-          </div>
-  
-        </form>
+      <div class="form-group">
+        <label><i class="fa fa-user bigicon"></i>Apellido</label>
+        <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
+          [ngModelOptions]="{standalone: true}" placeholder="Digite el apellido de usuario" required>
       </div>
-    </div>
-  <!-- </div> -->
+
+      <div class="form-group">
+        <label><i class="fas fa-phone-square bigicon"></i>Telefono</label>
+        <input type="text" class="form-control" aria-describedby="phone" placeholder="Digite el telefono"
+          [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-at bigicon"></i>Correo electronico</label>
+        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Digite el correo electronico"
+          [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
+
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-key bigicon"></i>Contraseña</label>
+        <input type="password" class="form-control" aria-describedby="password" placeholder="Digite la contraseña"
+          [(ngModel)]="modelUser.password" [ngModelOptions]="{standalone: true}" required>
+
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-address-card bigicon"></i>Rol</label>
+        <input type="number" class="form-control" aria-describedby="rol" placeholder="Ingrese el rol"
+          [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
+
+      </div>
+
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary " (click)="nuevoUsuario()"><i class="fas fa-plus fa-1x"></i>
+          Agregar usuario</button>
+      </div>
+
+    </form>
+  </div>
+</div>
+<div class="container-fluid  editUser" *ngIf="editSection">
+
+  <h1> Actualizar Usuario </h1>
+  <div>
+    <form *ngFor="let modelUser of user">
+      <div class="form-group">
+        <label><i class="fa fa-user bigicon"> </i>Nombre actual del Usuario: <b>{{modelUser.nameUser}} </b> </label>
+        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="modelUser.nameUser"
+          [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.nameUser}} " required>
+      </div>
+
+
+      <div class="form-group">
+        <label><i class="fa fa-user bigicon"> </i> Apellido actual del Usuario: <b>{{modelUser.lastName}} </b></label>
+        <input type="text" class="form-control" aria-describedby="Last Name" [(ngModel)]="modelUser.lastName"
+          [ngModelOptions]="{standalone: true}" placeholder="{{modelUser.lastName}}" required>
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-phone-square bigicon"> </i> Telefono actual del Usuario: <b>{{modelUser.phoneNumber}}
+          </b> </label>
+        <input type="number" class="form-control" aria-describedby="phone" placeholder="{{modelUser.phoneNumber}}"
+          [(ngModel)]="modelUser.phoneNumber" [ngModelOptions]="{standalone: true}" required>
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-at bigicon"> </i> Correo electronico del Usuario: <b>{{modelUser.user}} </b></label>
+        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="{{modelUser.user}}"
+          [(ngModel)]="modelUser.user" [ngModelOptions]="{standalone: true}" required>
+
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-key bigicon"></i> Contraseña:</label>
+        <input type="password" class="form-control" aria-describedby="password" [(ngModel)]="modelUser.password"
+          [ngModelOptions]="{standalone: true}" required>
+      </div>
+
+      <div class="form-group">
+        <label><i class="fas fa-address-card bigicon"></i> Rol actual: <b>{{modelUser.roles}} </b></label>
+        <input type="text" class="form-control" aria-describedby="roles" placeholder="{{modelUser.roles}}"
+          [(ngModel)]="modelUser.roles" [ngModelOptions]="{standalone: true}" required>
+
+      </div>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary" (click)="editUsuario(modelUser.id, modelUser)"><i
+            class="fas fa-save fa-1x"></i> | Actualizar Datos</button>
+      </div>
+
+    </form>
+  </div>
+</div>
