Correccion de login, agregado evento odcheck, respuesta tablas

--- a/eva-panther/src/app/admin/usuarios/usuarios.component.html
+++ b/eva-panther/src/app/admin/usuarios/usuarios.component.html
@@ -18,8 +18,8 @@
     <tbody>
       <tr *ngFor="let user of users">
         <th scope="row">{{user.id}}</th>
-        <td>{{user.nameUser | uppercase}}</td>
-        <td>{{user.lastName}}</td>
+        <td>{{user.nameUser}}</td>
+        <td>{{user.lastName }}</td>
         <td>{{user.phoneNumber}}</td>
         <td>{{user.user}}</td>
         <td>{{user.roles}}</td>
