--- a/eva-panther/src/app/asidebar/comienza/proyecto-uno/proyecto-uno.component.html
+++ b/eva-panther/src/app/asidebar/comienza/proyecto-uno/proyecto-uno.component.html
@@ -30,7 +30,7 @@
   <p>
     Tenlo en tus archivos  
   </p>
-  <a class="btn btn-primary" href="#">Descargar pdf</a>
+  <a class="btn btn-primary" href="../../../../assets/pdf/manual-panther.pdf" download="">Descargar pdf</a>
   <hr class="my-4" />
   <p>
     Llevalo siempre contigo! ver online 
