--- a/eva-panther/src/app/asidebar/comienza/proyecto-uno/proyecto-uno.component.html
+++ b/eva-panther/src/app/asidebar/comienza/proyecto-uno/proyecto-uno.component.html
@@ -1,4 +1,7 @@
 <div class="jumbotron jumbotron-panther">
+
+  <!-- listado de actividades a realizar por el usuario  -->
+  
   <div class="img"></div>
   <div class="container">
     <div class="row">
