--- a/eva-panther/src/app/asidebar/herramientas/herramientas.component.html
+++ b/eva-panther/src/app/asidebar/herramientas/herramientas.component.html
@@ -1,3 +1,4 @@
+ <!-- presentacion de herraminetas y contexto en un jumbotron -->
 <div class="container-fluid">
   <h2>
     Algunas herramientas que te pueden interesar
@@ -9,6 +10,7 @@
       porque van a ser útiles para seguir adelante con tu aprendizaje.
     </p>
   </div>
+  <!-- interpolacion de la lista de las herraminetas  -->
   <h2>Entornos de desarrollo (IDE) </h2>
   <div class="row">
     <div class="col-12 col-md-6 col-lg-6 col-xl-4" *ngFor="let ide of listaIdes ">
