--- a/eva-panther/src/app/navbar/home/home.component.html
+++ b/eva-panther/src/app/navbar/home/home.component.html
@@ -1,4 +1,6 @@
 <div class=" bd-home">
+  <!-- Esete es un carruosel para incentivar el usu
+  de la platfomo y motivar a los visitantes  -->
   <div id="corousel-home" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#corousel-home" data-slide-to="0" class="active"></li>
@@ -51,6 +53,9 @@
   </div>
 
 </div>
+<!-- se muestran las activades que se van agregando para asi 
+  conocer el temario del aplicativo -->
+  
 <section class="container SeccionDos">
   <div class="row">
     <div class="temas col" id="temaImpar">
