--- a/eva-panther/src/app/asidebar/recursos/externos/externos.component.html
+++ b/eva-panther/src/app/asidebar/recursos/externos/externos.component.html
@@ -1,3 +1,4 @@
+ <!-- presentacion de enlaces en un jumbotron -->
  <div class="jumbotron jumbotron-panther">
   <div class="img"></div>
   <div class="container">
@@ -13,7 +14,7 @@
     </div>
   </div>
 </div>
-
+<!-- interpolacion de la lista de los recursos  -->
 <div class="container-fluid">
 <div>
   <h2 class="d-flex justify-content-center display-3 my-5"> Lista de recursos {{name}}</h2>
